# hello-world

./: CMakeLists.txt  README.md  main.c
math/: CMakeLists.txt  MathFuncations.c  MathFuncations.h
